--- a/cluster/testclusterrole.yaml
+++ b/cluster/testclusterrole.yaml
@@ -10,3 +10,7 @@ subjects:
 - apiGroup: rbac.authorization.k8s.io
   kind: User
   name: harika.muthaboyina@ericsson.com
+- apiGroup: rbac.authorization.k8s.io
+  kind: User
+  name: joel.ratan.j.raj.purra@ericsson.com
+
