--- a/cluster/testclusterrole.yaml
+++ b/cluster/testclusterrole.yaml
@@ -16,6 +16,9 @@ subjects:
 - apiGroup: rbac.authorization.k8s.io
   kind: User
   name: maksim.tseljabov@ericsson.com
+- apiGroup: rbac.authorization.k8s.io
+  kind: User
+  name: sumalatha.arvini@ericsson.com
 
 
 
